2019-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Use real a new-line character as
	line delimiter rather than '\n' string.

	* magick/annotate.c (AnnotateImage): No longer implicitly call
	TranslateText() since this is not suitable for most use-cases and
	causes additional performance impact.  The API user can perform
	such translations in advance on the text string using
	TranslateText() if need be.  No longer call StringToList() to
	split strings into an array of strings since this can lead to
	unexpected results, and a custom-splitter is more efficient.

2019-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Only support '@filename' syntax to
	read drawing primitive from a file if we are not already drawing.

	* magick/utility.c (TranslateTextEx): Remove support for reading
	from a file using '@filename' syntax due to security concerns.
	Problem was reported to us by "Battle Furry" via the
	GraphicsMagick security mail alias on June 6, 2019.

2019-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (SetClientFilename): Reduce initialized data
	some more.

2019-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c: Search for n019003l.pfb (the "Helvetica"-like
	font) rather than fonts.dir since fonts.dir is not present in all
	URW font collections.

	* NEWS.txt: Update news.

2019-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/logo.c: Tidy logo image definitions, and logo image
	output.

2019-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c: Make more data const.

2019-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c: Reduce initialized static allocations.

	* magick/display.c: Reduce initialized static allocations.

	* magick/widget.c (MagickSplitNDLTextToList): Add static
	implementation function.

2019-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
