@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190608"
-#define public MagickPackageReleaseDate "snapshot-20190608"
+#define public MagickPackageVersionAddendum ".020190609"
+#define public MagickPackageReleaseDate "snapshot-20190609"
