@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2019-06-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/render.c (DrawImage): Terminate drawing if
+DrawCompositeMask() reports failure.  Fixes oss-fuzz 12373
+&quot;graphicsmagick/coder_MVG_fuzzer: Timeout in
+graphicsmagick_coder_MVG_fuzzer&quot;.
+(TracePath): Terminate path parsing upon first parsing error.</li>
+</ul>
+</blockquote>
 <p>2019-06-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
