@@ -291,7 +291,10 @@ systems.</li>
 </ul>
 <p>Behavior Changes:</p>
 <ul class="simple">
-<li>AnnotateImage(): No longer implicitly call TranslateText() since this is not suitable for most use-cases and causes additional performance impact.  The API user can perform such translations in advance on the text string using TranslateText() if need be.</li>
+<li>AnnotateImage(): No longer implicitly call TranslateText() since
+this is not suitable for most use-cases and causes additional
+performance impact.  The API user can perform such translations in
+advance on the text string using TranslateText() if need be.</li>
 </ul>
 </div>
 <div class="section" id="november-17-2018">
